Bug 130513 - CRASH: Writer crashes changing UI to notebookbar (win)
Summary: CRASH: Writer crashes changing UI to notebookbar (win)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-02-07 19:06 UTC by Xisco Faulí
Modified: 2020-08-07 13:37 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-02-07 19:06:06 UTC
Steps to reproduce:
1. Open writer
2. View - User Interface - Tabbed

-> Crash

Reproduced in

Version: 7.0.0.0.alpha0+ (x64)
Build ID: 06164bdf2f5babd337a2f7813c572ca17056c521
CPU threads: 16; OS: Windows 6.3 Build 9600; UI render: default; VCL: win; 
Locale: en-GB (en_GB); UI-Language: en-US
Calc: threaded
Comment 1 Xisco Faulí 2020-02-07 19:07:08 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=9b43115151f3f7a34377ad027450fd1afbb5f738

author	Caolán McNamara <caolanm@redhat.com>	2020-01-31 17:49:56 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2020-02-01 12:12:56 +0100
commit 9b43115151f3f7a34377ad027450fd1afbb5f738 (patch)
tree e65af8ae548793f60d16892dd0a242b9c417af1d
parent fa1b12c4ce1963086c30bef222a5238485bb2219 (diff)
support arbitrary widgets in toolbars via children of GtkToolItem

Bisected with: win-6-5

Adding Cc: to Caolán McNamara
Comment 2 Caolán McNamara 2020-02-08 19:09:22 UTC
took me a while to figure this out, seems that sfxlo-OptionalBox is in the wrong library so those entries in the .ui file are created under Linux but are null under windows, so under windows the parent widgets of these are not as expected.
Comment 3 Commit Notification 2020-02-08 20:47:48 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2d0944ab7a94ea0d5cd5f66c4895a0c99d9a3593

Resolves: tdf#130513 sfxlo-OptionalBox isn't in sfx

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Mike Kaganski 2020-02-10 09:06:14 UTC
still crashes with Version: 7.0.0.0.alpha0+ (x64)
Build ID: a570a6b122125e88629fde990306f525c561284c
CPU threads: 12; OS: Windows 10.0 Build 18363; UI render: GL; VCL: win; 
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: CL
Comment 5 Xisco Faulí 2020-02-10 09:38:16 UTC
I do confirm the issue is fixed for me in

Version: 7.0.0.0.alpha0+ (x64)
Build ID: 121fb94b7857c8bcba27c9715374328e965bece2
CPU threads: 16; OS: Windows 6.3 Build 9600; UI render: default; VCL: win; 
Locale: en-GB (en_GB); UI-Language: en-US
Calc: threaded

@Mike, could you please try with a clean profile ?
Comment 6 Mike Kaganski 2020-02-10 19:47:29 UTC
(In reply to Xisco Faulí from comment #5)
> @Mike, could you please try with a clean profile ?

Just did make clean && make, and confirm it fixed. Seems some problem resulting from mixing profiles with normal installation because of using --enable-release-build. Sorry for the noise, and thanks!
Comment 7 Xisco Faulí 2020-02-11 07:57:26 UTC
I guess we can close it now
@Caolán, thanks for fixing this issue!!